<resources>
    <string name="app_name">ZinzaMessenger</string>
    <string name="draw_open">Open</string>
    <string name="draw_close">Close</string>

    <string name="action_settings">Settings</string>
    <string name="app_overview_1st_item_text">Thanks for using \ ZinzaMessenger with it you can</string>
    <string name="app_overview_2nd_item_text">Free chat with your friends</string>
    <string name="app_overview_3rd_item_text">Search and add new friend</string>
    <string name="app_overview_4th_item_text">Send and receive file quickly</string>
    <string name="StartMessaging">Skip</string>
    <string name="Email">Email</string>
    <string name="Passwd">Password</string>
    <string name="Remmember">Remember me</string>
    <string name="Login">Login</string>
    <string name="SignUp">Sign up</string>
    <string name="OrConnectWith">Or connect with</string>
    <string name="facebook">FaceBook</string>
    <string name="google">Google</string>
    <string name="forgotpass">Forgot your password?</string>
    <string name="user">Username</string>
    <string name="confirm">Confirm</string>
    <string name="Dob">Date of birth</string>
    <string name="start">Start</string>
    <string name="searchFriend">Input and find they on Messenger</string>
    <string name="addFriend">Search friend</string>
    <string name="searchContact">Search Friend</string>
    <string name="title_alert">Login Success</string>
    <string name="title_activity_settings">Settings</string>
    <string name="log_out">Are you sure to logOut ?</string>
    <string name="Require_internet">Turn on internet connection</string>
    <string name="facebook_app_id">414860935514338</string>
    <string name="gg_signin_fail">Google Sign In failed.</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value"/>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
