<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/icon_image2"
        android:layout_gravity="center"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:src="@drawable/zinza_icon"
        app:civ_border_width="2dp"
        app:civ_border_color="#FF000000"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:id="@+id/edtEmailLogin"
            android:drawableLeft="@drawable/avatar"
            android:hint="@string/Email"

            android:drawablePadding="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:paddingLeft="20dp"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            >
            <requestFocus/>
        </EditText>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:id="@+id/edtPassWrLogin"
            android:drawableLeft="@drawable/locked"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/Passwd"
            android:drawablePadding="10dp"
            android:paddingLeft="20dp"
            android:inputType="textPassword"
            android:singleLine="true"
            >
            <requestFocus/>
        </EditText>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <CheckBox
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:id="@+id/cbLogin"
                android:layout_marginLeft="50dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/Remmember"/>
        </LinearLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/btnLogin"
            android:text="@string/Login"
            android:layout_weight="1"
            android:background="@drawable/btn_state"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:textColor="@color/white"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/btnSignUp"
            android:text="@string/SignUp"
            android:layout_weight="1"
            android:background="@drawable/btn_state"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:textColor="@color/white"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="0.8"
            android:paddingTop="10dp">
            <ImageView
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="2"
                android:background="@android:color/black"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="5dp"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/OrConnectWith"
                android:layout_weight="2"/>
            <ImageView
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="2"
                android:background="@android:color/black"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="25dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="40dp"
                android:text="@string/facebook"
                android:textColor="@color/white"
                android:background="@drawable/btn_fb"
                android:layout_marginLeft="50dp"/>

            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="40dp"
                android:text="@string/google"
                android:background="@drawable/btn_gg"
                android:textColor="@color/white"
                android:layout_marginRight="50dp"
                android:id="@+id/button" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.8"
            android:text="@string/forgotpass"
            android:id="@+id/tvForgotPass"
            android:layout_marginLeft="10dp"
            android:gravity="center_horizontal"
            android:layout_marginTop="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"/>
    </LinearLayout>
</LinearLayout>