<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/fbcolor"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@drawable/left_arrow"
            android:layout_marginLeft="10dp"
            android:id="@+id/btnBackSignUp"
            android:layout_marginTop="15dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/Login"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="10dp"
            android:textSize="15dp"
            android:textColor="@color/white"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="10dp" />
    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/icon_image2"
        android:layout_gravity="center"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:src="@drawable/zinza_icon"
        app:civ_border_width="2dp"
        app:civ_border_color="#FF000000"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:id="@+id/edtUsernameSign"
            android:drawableLeft="@drawable/avatar"
            android:hint="@string/user"
            android:drawablePadding="10dp"
            android:layout_marginLeft="20dp"
            android:paddingLeft="20dp"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            >
            <requestFocus/>
        </EditText>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:id="@+id/edtEmailSign"
            android:drawableLeft="@drawable/mail"
            android:layout_marginLeft="20dp"
            android:hint="@string/Email"
            android:drawablePadding="10dp"
            android:paddingLeft="20dp"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            >
        </EditText>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:id="@+id/edtPassWrLogin"
            android:drawableLeft="@drawable/locked"
            android:layout_marginLeft="20dp"
            android:hint="@string/Passwd"
            android:drawablePadding="10dp"
            android:paddingLeft="20dp"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            >
        </EditText>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:id="@+id/edtConfirm"
            android:drawableLeft="@drawable/check_mark"
            android:layout_marginLeft="20dp"
            android:hint="@string/confirm"
            android:drawablePadding="10dp"
            android:paddingLeft="20dp"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            >
        </EditText>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:id="@+id/edtDob"
            android:drawableLeft="@drawable/calendar"
            android:layout_marginLeft="20dp"
            android:hint="@string/Dob"
            android:drawablePadding="10dp"
            android:paddingLeft="20dp"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            >
        </EditText>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="25dp" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/btn_state"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:text="@string/SignUp"
            android:textColor="@color/white"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="35dp" />
    </LinearLayout>
</LinearLayout>